added blog and about

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,13 @@
 
     <title>JFC Astro Site</title>
   </head>
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+    <a href="/blog/">Blog</a>
+  
   <body>
     <h1>JFC Astro Site</h1>
   </body>
+
+
 </html>
