--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,17 +8,18 @@
 
     <meta name="viewport" content="width=device-width" />
 
-    <title>JFC Astro Site</title>
+    <title>JFC Astro Site Blog</title>
   </head>
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>About Me</h1>
-    <h2>Trying Astro Initial Tutorial Again</h2>
+ 
+    <h1>JFC Astro Blog</h1>
+    <h2>Astro Blog</h2>
     <p>
-      I highly recommend working throught this tutorial twice. There is a lot to
-      learn that you may miss the first time around
+      Once you have tried this a few times you realize how much is available and
+      will learn the routine. Keep going 😎
     </p>
   </body>
 </html>
