--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "JFC Astro Tut Home Page"
 ---
 
 <html lang="en">
@@ -8,14 +8,14 @@
 
     <meta name="viewport" content="width=device-width" />
 
-    <title>JFC Astro Site</title>
+    <title>{pageTitle}</title>
   </head>
   <a href="/">Home</a>
   <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
   
   <body>
-    <h1>JFC Astro Site</h1>
+    <h1>{pageTitle}</h1>
   </body>
 
 
