header and footer components

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,9 @@
 ---
+
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+
 const pageTitle = "About JFC"
 const identity = {
   firstName: 'Jim',
@@ -12,7 +17,9 @@ const happy = true;
 const finished = false;
 const goal = 4;
 
-
+const skillColor = 'blue';
+const fontWeight ='bold';
+const textCase = 'uppercase';
 
 ---
 
@@ -21,13 +28,22 @@ const goal = 4;
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width" />
+    <style define:vars={{skillColor,fontWeight,textCase}}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
 
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+   <Header/>
     <h1>{pageTitle}</h1>
     <h2>Trying Astro Initial Tutorial Again</h2>
     <p>
@@ -36,19 +52,20 @@ const goal = 4;
     </p>
     <p>Here are a few facts about me</p>
     <ul>
-    <li>My name is {identity.firsName}.</li>
-    <li>I live in {identity.country} and I work as a {identity.occupation}</li>
+    <li>My name is {identity.firstName}.</li>
+    <li>I live in {identity.country} and I work as a {identity.occupation.toLowerCase()}.</li>
     {identity.hobbies.length >= 2 &&
     <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
     }
     </ul>
     <p>My skills are:</p>
     <ul>
-      {skills.map((skill)=><li>{skill}</li>)}
+      {skills.map((skill)=><li class='skill'>{skill}</li>)}
    
     </ul>
     {happy && <p>I am happy to be coding again</p>}
     {finished && <p>I finished this tutorial!</p>}
     {goal===3? <p>My goal is to finish in 3 days</p>:<p>My goal is {goal} days.</p>}
+    <Footer/>
   </body>
 </html>
