--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
-const pageTitle = "JFC Astro Tut Home Page"
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+const pageTitle = "JFC Astro Tut Home Page";
 ---
 
 <html lang="en">
@@ -10,12 +13,12 @@ const pageTitle = "JFC Astro Tut Home Page"
 
     <title>{pageTitle}</title>
   </head>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+
   
   <body>
+    <Header/>
     <h1>{pageTitle}</h1>
+    <Footer/>
   </body>
 
 
