--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,71 +1,69 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
 
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
-
-const pageTitle = "About JFC"
+const pageTitle = 'About JFC';
 const identity = {
   firstName: 'Jim',
   country: 'Canada',
   occupation: 'Web Developer Student',
-  hobbies: ['Biking','Hiking','Outrigger Canoeing','Computer Programming']
-}
-const skills =['Leadership','Goal Setting','Managing Diverse Groups']
+  hobbies: ['Biking', 'Hiking', 'Outrigger Canoeing', 'Computer Programming'],
+};
+const skills = ['Leadership', 'Goal Setting', 'Managing Diverse Groups'];
 
 const happy = true;
 const finished = false;
 const goal = 4;
 
 const skillColor = 'blue';
-const fontWeight ='bold';
+const fontWeight = 'bold';
 const textCase = 'uppercase';
-
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-
-    <meta name="viewport" content="width=device-width" />
-    <style define:vars={{skillColor,fontWeight,textCase}}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-      .skill {
-        color: var(--skillColor);
-        font-weight: var(--fontWeight);
-        text-transform: var(--textCase);
-      }
-    </style>
-
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-   <Header/>
-    <h1>{pageTitle}</h1>
-    <h2>Trying Astro Initial Tutorial Again</h2>
-    <p>
-      I highly recommend working throught this tutorial twice. There is a lot to
-      learn that you may miss the first time around
-    </p>
-    <p>Here are a few facts about me</p>
-    <ul>
+<style is:global define:vars={{ skillColor, fontWeight, textCase }}>
+  h1 {
+    color: purple;
+    font-size: 4rem;
+  }
+  .skill {
+    color: var(--skillColor);
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
+  }
+</style>
+<BaseLayout>
+  <h1>{pageTitle}</h1>
+  <h2>Trying Astro Initial Tutorial Again</h2>
+  <p>
+    I highly recommend working throught this tutorial twice. There is a lot to
+    learn that you may miss the first time around
+  </p>
+  <p>Here are a few facts about me</p>
+  <ul>
     <li>My name is {identity.firstName}.</li>
-    <li>I live in {identity.country} and I work as a {identity.occupation.toLowerCase()}.</li>
-    {identity.hobbies.length >= 2 &&
-    <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+    <li>
+      I live in {identity.country} and I work as a {
+        identity.occupation.toLowerCase()
+      }.
+    </li>
+    {
+      identity.hobbies.length >= 2 && (
+        <li>
+          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
+        </li>
+      )
     }
-    </ul>
-    <p>My skills are:</p>
-    <ul>
-      {skills.map((skill)=><li class='skill'>{skill}</li>)}
-   
-    </ul>
-    {happy && <p>I am happy to be coding again</p>}
-    {finished && <p>I finished this tutorial!</p>}
-    {goal===3? <p>My goal is to finish in 3 days</p>:<p>My goal is {goal} days.</p>}
-    <Footer/>
-  </body>
-</html>
+  </ul>
+  <p>My skills are:</p>
+  <ul>
+    {skills.map((skill) => <li class="skill">{skill}</li>)}
+  </ul>
+  {happy && <p>I am happy to be coding again</p>}
+  {finished && <p>I finished this tutorial!</p>}
+  {
+    goal === 3 ? (
+      <p>My goal is to finish in 3 days</p>
+    ) : (
+      <p>My goal is {goal} days.</p>
+    )
+  }
+</BaseLayout>
