--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,36 +1,31 @@
 ---
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
-import '../styles/global.css';
-const pageTitle = 'JFC Astro Tut Blog'
+import BaseLayout from '../layouts/BaseLayout.astro';
+const allPosts = Object.values(
+  import.meta.glob('./posts/*.md', { eager: true })
+);
+const pageTitle = 'JFC Astro Tut Blog';
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-
-    <meta name="viewport" content="width=device-width" />
-
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-<Header/>
-
-    <h1>{pageTitle}</h1>
-    <h2>Astro Blog</h2>
-    <p>
-      Once you have tried this a few times you realize how much is available and
-      will learn the routine. Keep going 😎
-    </p>
-    <ul>
-     <li><a href="/posts/post-1">Post 1</a> </li>
-     <li>
-     <a href="/posts/post-2">Post 2</a>
-     </li>
-     <li>
-     <a href="/posts/post-3">Post 3</a>
-     </li>
-    </ul>
-    <Footer/>
-  </body>
-</html>
+<BaseLayout>
+  <h2>Astro Blog</h2>
+  <p>
+    Once you have tried this a few times you realize how much is available and
+    will learn the routine. Keep going 😎
+  </p>
+  <ul>
+    <!-- <li><a href="/posts/post-1">Post 1</a></li>
+    <li>
+      <a href="/posts/post-2">Post 2</a>
+    </li>
+    <li>
+      <a href="/posts/post-3">Post 3</a>
+    </li> -->
+    {
+      allPosts.map((post: any) => (
+        <li>
+          <a href={post.url}>{post.frontmatter.title}</a>
+        </li>
+      ))
+    }
+  </ul>
+</BaseLayout>
