--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import BlogPost from '../components/BlogPost.astro';
 const allPosts = Object.values(
   import.meta.glob('./posts/*.md', { eager: true })
 );
@@ -13,18 +14,9 @@ const pageTitle = 'JFC Astro Tut Blog';
     will learn the routine. Keep going 😎
   </p>
   <ul>
-    <!-- <li><a href="/posts/post-1">Post 1</a></li>
-    <li>
-      <a href="/posts/post-2">Post 2</a>
-    </li>
-    <li>
-      <a href="/posts/post-3">Post 3</a>
-    </li> -->
     {
       allPosts.map((post: any) => (
-        <li>
-          <a href={post.url}>{post.frontmatter.title}</a>
-        </li>
+        <BlogPost url={post.url} title={post.frontmatter.title} />
       ))
     }
   </ul>
